--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>    
+    <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
